grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.import_decl,
      $.fn_decl,
      $.struct_decl,
      $.union_decl,
      $.trait_decl,
      $.enum_decl,
      $.impl_decl,
      $.type_alias,
      $.foreign_global,
    ),

    // import ./a; / import a.b.{x, y}; / import a.b.*; / import a.b as c;
    // import a.b; The compiler also permits an empty selector list.
    import_decl: $ => seq(
      // Imports participate in target selection just like declarations.  Keep
      // arbitrary attributes in the concrete tree so editors do not report
      // valid `@cfg … import` forms as syntax errors.
      repeat($.attribute),
      optional('pub'),
      'import',
      optional(seq('.', '/')),
      $.import_path,
      optional(choice(
        seq('.', $.glob_import),
        seq('.', $.multi_import),
        seq('as', $.identifier),
      )),
      ';',
    ),
    import_path: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    glob_import: $ => '*',
    multi_import: $ => seq('{', commaSep($.identifier), '}'),

    // ── Attributes ────────────────────────────────────────────────────────────

    attribute: $ => seq(
      '@',
      field('name', $.identifier),
      optional(seq('(', commaSep($.attr_arg), optional(','), ')')),
    ),

    attr_arg: $ => choice(
      seq($.identifier, '=', $._attr_value),
      $._attr_value,
    ),

    _attr_value: $ => choice($.string_literal, $.integer_literal, $.identifier),

    // ── Function declaration ─────────────────────────────────────────────────

    fn_decl: $ => seq(
      repeat($.attribute),
      optional('pub'),
      optional('unsafe'),
      'fn',
      field('name', $.identifier),
      optional($.generic_params),
      '(',
      commaSep($.param),
      ')',
      optional(field('return_type', $._type)),
      choice($.block, ';'),
    ),

    generic_params: $ => seq('[', commaSep1($.identifier), ']'),

    param: $ => choice(
      seq(
        repeat($.attribute),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),
      '...',
      seq(
        '...',
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),
    ),

    // ── Struct ────────────────────────────────────────────────────────────────

    struct_decl: $ => seq(
      repeat($.attribute),
      optional('pub'),
      'struct',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      itemSep($.struct_field),
      '}',
    ),

    struct_field: $ => seq(
      optional('const'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      // Field attributes are opaque metadata. Keep them in the concrete tree
      // even when this grammar does not know their community-defined meaning.
      repeat($.attribute),
      optional(seq(
        ':',
        field('bit_width', $.integer_literal),
        repeat($.attribute),
      )),
    ),

    union_decl: $ => seq(
      repeat($.attribute),
      optional('pub'),
      'union',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      itemSep($.struct_field),
      '}',
    ),

    // ── Trait ─────────────────────────────────────────────────────────────────

    trait_decl: $ => seq(
      repeat($.attribute),
      optional('pub'),
      'trait',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      repeat($.trait_method),
      '}',
    ),

    trait_method: $ => seq(
      'fn',
      field('name', $.identifier),
      optional($.generic_params),
      '(',
      commaSep($.param),
      ')',
      optional(field('return_type', $._type)),
      ';',
    ),

    // ── Enum ──────────────────────────────────────────────────────────────────

    enum_decl: $ => seq(
      repeat($.attribute),
      optional('pub'),
      'enum',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      itemSep($.enum_variant),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq('(', commaSep($._type), ')')),
    ),

    // ── Impl ──────────────────────────────────────────────────────────────────

    impl_decl: $ => seq(
      'impl',
      field('first_type', $._type),
      optional(seq('for', field('for_type', $._type))),
      '{',
      repeat($.fn_decl),
      '}',
    ),

    type_alias: $ => seq(
      repeat($.attribute),
      optional('pub'),
      'type',
      field('name', $.identifier),
      optional($.generic_params),
      '=',
      field('value', $._type),
      ';',
    ),

    block: $ => seq('{', repeat($._stmt), '}'),

    _stmt: $ => choice(
      $.var_stmt,
      $.const_stmt,
      $.return_stmt,
      $.if_stmt,
      $.for_stmt,
      $.cfg_block,
      $.unsafe_block,
      $.break_stmt,
      $.continue_stmt,
      $.expr_stmt,
    ),

    var_stmt: $ => seq(
      repeat($.attribute),
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expr))),
      ';',
    ),

    const_stmt: $ => seq(
      repeat($.attribute),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expr),
      ';',
    ),

    return_stmt: $ => seq('ret', optional($._expr), ';'),
    for_stmt: $ => seq(
      'for',
      choice(
        // Compiler-supported iteration: `for var item : values {}` and
        // `for index, item : values {}`. `var` is optional in both forms.
        seq(
          optional('var'),
          field('var', $.identifier),
          optional(seq(',', field('idx', $.identifier))),
          ':',
          field('iter', $._expr),
        ),
        // C-style: `for var i = 0; cond; update {}` — var-decl initializer.
        seq(
          optional('var'),
          field('var', $.identifier),
          '=',
          field('init', $._expr),
          ';',
          optional(field('condition', $._expr)),
          ';',
          optional(field('update', $._expr)),
        ),
        // C-style: `for expr; cond; update {}` — arbitrary-expression initializer.
        // The compiler parses any expression as the initializer when no `var`
        // keyword is present and the init is followed by `;` (mod.rs:649-678).
        seq(
          field('init_expr', $._expr),
          ';',
          optional(field('condition', $._expr)),
          ';',
          optional(field('update', $._expr)),
        ),
        // C-style: `for ; cond; update {}` — empty initializer.
        seq(
          ';',
          optional(field('condition', $._expr)),
          ';',
          optional(field('update', $._expr)),
        ),
        blank(),
        field('condition', $._expr),
      ),
      field('body', $.block),
    ),

    match_arm: $ => seq(
      field('pattern', $.match_pattern),
      optional(seq('if', field('guard', $._expr))),
      '=>',
      field('body', $._expr),
    ),

    match_pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.variant_pattern,
    ),

    wildcard_pattern: $ => '_',
    literal_pattern: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.bool_literal,
    ),
    variant_pattern: $ => seq(
      optional(seq(field('enum', $.identifier), '.')),
      field('name', $.identifier),
      optional(seq('(', commaSep($.match_pattern), ')')),
    ),

    unsafe_block: $ => seq('unsafe', $.block),

    expr_stmt: $ => seq($._expr, ';'),

    // ── Types ─────────────────────────────────────────────────────────────────

    _type: $ => choice(
      $._primitive_type,
      $.named_type,
      $.ref_type,
      $.ptr_type,
      $.array_type,
      $.slice_type,
      $.flexible_array_type,
      $.fn_type,
      $.dyn_type,
      $.never_type,
    ),

    named_type: $ => seq(
      $.qualified_identifier,
      optional(seq('[', commaSep1($._type), ']')),
    ),

    qualified_identifier: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    // `&Type` is a shared reference; `&Type!` is an exclusive (mutable)
    // reference. Both are parsed by the compiler in parse_type (mod.rs:1833-1850).
    ptr_type: $ => choice(seq('*', $._type), seq('**', $._type)),
    array_type: $ => seq('[', $._type, ';', $.integer_literal, ']'),
    fn_type: $ => seq('fn', '(', commaSep($._type), ')', optional($._type)),
    _expr: $ => choice(
      $.assign_expr,
      $.compound_assign_expr,
      $.binary_expr,
      $.unary_expr,
      $.postfix_expr,
      $.cast_expr,
      $.try_expr,
      $.call_expr,
      $.method_call_expr,
      $.field_expr,
      $.index_expr,
      $.slice_expr,
      $.match_expr,
      $.array_lit,
      $.struct_lit,
      $.closure_expr,
      $.range_expr,
      $.identifier,
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.byte_string_literal,
      $.raw_string_literal,
      $.bool_literal,
      $.paren_expr,
    ),

    assign_expr: $ => prec.right(1, seq(
      field('lhs', $._expr),
      '=',
      field('rhs', $._expr),
    )),

    binary_expr: $ => {
      // Precedence levels are derived from the compiler's recursive-descent
      // call chain in quazistrap/src/parser/mod.rs (higher number = tighter):
      //   parse_logical_or  → parse_logical_and  → parse_equality
      //   → parse_comparison → parse_bitwise_or  → parse_bitwise_xor
      //   → parse_bitwise_and → parse_shift      → parse_term
      //   → parse_factor
      //
      // In the compiler, bitwise operators bind *tighter* than equality and
      // comparison: `a == b | c` parses as `a == (b | c)`, and `a < b & c`
      // parses as `a < (b & c)`. The table below matches this ordering.
      const table = [
        [prec.left, 2,  '||'],
        [prec.left, 3,  '&&'],
        [prec.left, 4,  choice('==', '!=')],     // equality  (was 7)
        [prec.left, 5,  choice('<', '<=', '>', '>=')], // comparison (was 8)
        [prec.left, 6,  '|'],                     // bitwise OR  (was 4)
        [prec.left, 7,  '^'],                     // bitwise XOR (was 5)
        [prec.left, 8,  '&'],                     // bitwise AND (was 6)
        [prec.left, 9,  choice('<<', '>>')],
        [prec.left, 10, choice('+', '-')],
        [prec.left, 11, choice('*', '/', '%')],
        [prec.right, 12, '**'],
      ];
      return choice(...table.map(([assoc, prec_n, op]) =>
        assoc(prec_n, seq(
          field('lhs', $._expr),
          field('op', op),
          field('rhs', $._expr),
        ))
      ));
    },

    unary_expr: $ => prec(13, seq(
      field('op', choice('-', '!', '~', '++', '--', '&', '*')),
      field('operand', $._expr),
    )),

    postfix_expr: $ => prec.left(14, seq(
      field('operand', $._expr),
      field('op', choice('++', '--')),
    )),

    call_expr: $ => prec.left(14, seq(
      field('callee', $._expr),
      optional(seq('[', commaSep1($._type), ']')),
      '(',
      commaSep($.call_arg),
      ')',
    )),

    call_arg: $ => choice($.named_arg, $._expr),
    named_arg: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expr),
    ),

    field_expr: $ => prec.left(14, seq(
      field('object', $._expr),
      '.',
      field('field', $.identifier),
    )),

    index_expr: $ => prec.left(14, seq(
      field('object', $._expr),
      '[',
      field('index', commaSep1($._expr)),
      ']',
    )),

    slice_expr: $ => prec.left(14, seq(
      field('object', $._expr),
      '[',
      optional(field('start', $._expr)),
      ':',
      optional(field('end', $._expr)),
      optional(seq(':', optional(field('step', $._expr)))),
      ']',
    )),

    try_expr: $ => prec.left(14, seq(
      field('value', $._expr),
      '?',
    )),

    match_expr: $ => seq(
      'match',
      field('value', $._expr),
      '{',
      commaSep($.match_arm),
      optional(','),
      '}',
    ),

    array_lit: $ => seq('[', commaSep($._expr), ']'),

    struct_lit: $ => seq(
      field('type', $.identifier),
      '{',
      commaSep($.struct_lit_field),
      optional(','),
      '}',
    ),
    struct_lit_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expr),
    ),

    closure_expr: $ => seq('|', commaSep($.identifier), '|', field('body', $._expr)),

    range_expr: $ => prec.left(9, seq(
      field('start', $._expr),
      choice('..', '..='),
      field('end', $._expr),
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    integer_literal: $ => /[0-9]+/,
    string_literal: $ => /"([^"\\]|\\[\s\S])*"/,
