test/corpus/core.txt
==================
imports, generic types, methods, and indexing
==================

import std.io;

fn main() i32 {
    var triples: Array[[i32; 3]] = Array.new();
    triples.push([1, 2, 3]);
    const first = triples[0];
    io.println("{}", first[1]);
    ret 0;
}

---

(source_file
  (import_decl
    (import_path
      (identifier)
      (identifier)))
  (fn_decl
    (identifier)
    (block
      (var_stmt
        (identifier)
        (named_type
          (qualified_identifier
            (identifier))
          (array_type
            (integer_literal)))
        (call_expr
          (field_expr
            (identifier)
            (identifier))))
      (expr_stmt
        (call_expr
          (field_expr
            (identifier)
            (identifier))
          (call_arg
            (array_lit
              (integer_literal)
              (integer_literal)
              (integer_literal)))))
      (const_stmt
        (identifier)
        (index_expr
          (identifier)
          (integer_literal)))
      (expr_stmt
        (call_expr
          (field_expr
            (identifier)
            (identifier))
          (call_arg
            (string_literal))
          (call_arg
            (index_expr
              (identifier)
              (integer_literal)))))
      (return_stmt
        (integer_literal)))))

==================
multi-index expressions accepted by the compiler
==================

fn set(values: Matrix) void {
    values[0, 1] = 4;
}

---

(source_file
  (fn_decl
    (identifier)
    (param
      (identifier)
      (named_type
        (qualified_identifier
          (identifier))))
    (block
      (expr_stmt
        (assign_expr
          (index_expr
            (identifier)
            (integer_literal)
            (integer_literal))
          (integer_literal))))))

==================
semicolon-separated aggregate items accepted by the compiler
==================

struct Pair {
    left: i32;
    right: i32;
}

union Scalar {
    integer: i32;
    decimal: f64;
}

enum Mode {
    Read;
    Write;
}

---

(source_file
  (struct_decl
    (identifier)
    (struct_field
      (identifier))
    (struct_field
      (identifier)))
  (union_decl
    (identifier)
    (struct_field
      (identifier))
    (struct_field
      (identifier)))
  (enum_decl
    (identifier)
    (enum_variant
      (identifier))
    (enum_variant
      (identifier))))

==================
conditional public import
==================

@cfg(target_os="windows")
pub import std.windows.*;

---

(source_file
  (import_decl
    (attribute
      (identifier)
      (attr_arg
        (identifier)
        (string_literal)))
    (import_path
      (identifier)
      (identifier))
    (glob_import)))

==================
relative and empty-selector imports
==================

import ./config;
import settings.{};

---

(source_file
  (import_decl
    (import_path
      (identifier)))
  (import_decl
    (import_path
      (identifier))
    (multi_import)))

==================
incomplete function body recovers
==================

fn main() i32 {
    const value =

---

(source_file
  (ERROR
    (identifier)
    (identifier)))

==================
trait signatures use named parameters
==================

pub trait ReadableConfig {
    fn parse_string(content: str) void;
}

---

(source_file
  (trait_decl
    (identifier)
    (trait_method
      (identifier)
      (param
        (identifier)))))

==================
opaque aggregate field attributes
==================

struct User {
    name: String @ini("username") @json(name="user_name"),
    flags: u32 @bits(legacy, width=3,):3 @wire("v1"),
}

@repr(C) union Value {
    number: i32 @wire(tag=1),
}

---

(source_file
  (struct_decl
    (identifier)
    (struct_field
      (identifier)
      (named_type
        (qualified_identifier
          (identifier)))
      (attribute
        (identifier)
        (attr_arg
          (string_literal)))
      (attribute
        (identifier)
        (attr_arg
          (identifier)
          (string_literal))))
    (struct_field
      (identifier)
      (attribute
        (identifier)
        (attr_arg
          (identifier))
        (attr_arg
          (identifier)
          (integer_literal)))
      (integer_literal)
      (attribute
        (identifier)
        (attr_arg
          (string_literal)))))
  (union_decl
    (attribute
      (identifier)
      (attr_arg
        (identifier)))
    (identifier)
    (struct_field
      (identifier)
      (attribute
        (identifier)
        (attr_arg
          (identifier)
          (integer_literal))))))

==================
for forms accepted by the compiler
==================

fn loops() void {
    for var i : 0..3 { }
    for index, value : items { }
    for var step = 0; step < 3; step++ { }
    for ; ready; tick() { }
}

---

(source_file
  (fn_decl
    (identifier)
    (block
      (for_stmt
        (identifier)
        (range_expr
          (integer_literal)
          (integer_literal))
        (block))
      (for_stmt
        (identifier)
        (identifier)
        (identifier)
        (block))
      (for_stmt
        (identifier)
        (integer_literal)
        (binary_expr
          (identifier)
          (integer_literal))
        (postfix_expr
          (identifier))
        (block))
      (for_stmt
        (identifier)
        (call_expr
          (identifier))
        (block)))))
